--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
 
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
+    "favicon": "./assets/images/favicon.png",
     "scheme": "mobile",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
