--- a/app.json
+++ b/app.json
@@ -3,22 +3,18 @@
     "name": "mobile",
     "slug": "mobile",
     "version": "1.0.0",
-
     "router": {
       "root": "src/app"
     },
-
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "favicon": "./assets/images/favicon.png",
     "scheme": "mobile",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-
     "ios": {
       "supportsTablet": true
     },
-
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
@@ -27,14 +23,13 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.emiliohb.mobile"
     },
-
     "web": {
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-
     "plugins": [
       "expo-router",
       [
@@ -50,7 +45,6 @@
         }
       ]
     ],
-
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
