--- a/app.json
+++ b/app.json
@@ -1,27 +1,20 @@
 {
   "expo": {
-    "name": "mobile",
+    "name": "Los Pollos Hermanos",
     "slug": "los-pollos-hermanos",
     "version": "1.0.0",
     "router": {
       "root": "src/app"
     },
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/icon.jpg",
     "favicon": "./assets/images/favicon.png",
-    "scheme": "mobile",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true
     },
     "android": {
-      "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
-      },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "package": "com.emiliohb.mobile"
@@ -35,12 +28,12 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/logo.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
+          "backgroundColor": "#1c0f0a",
           "dark": {
-            "backgroundColor": "#000000"
+            "backgroundColor": "#1c0f0a"
           }
         }
       ]
